# genie-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bacon.toml
.github/workflows/: artifact.yml  ci.yml
c/cgenie/: Cargo.toml
c/cgenie-cpx/: Cargo.toml
c/cgenie-cpx/src/: lib.rs
c/cgenie-drs/: Cargo.toml
c/cgenie-drs/src/: lib.rs
c/cgenie-hki/: Cargo.toml
c/cgenie-hki/src/: lib.rs
c/cgenie-lang/: Cargo.toml
c/cgenie-lang/src/: lib.rs
c/cgenie-scx/: Cargo.toml
c/cgenie-scx/src/: lib.rs
c/cgenie/src/: lib.rs
c/include/cgenie/: lang.h  scx.h
crates/auto-serializer/: Cargo.toml
crates/auto-serializer/src/: lib.rs
crates/genie-cpx/: Cargo.toml  README.md
crates/genie-cpx/src/: lib.rs  read.rs  write.rs
crates/genie-cpx/test/campaigns/: 10 The First Punic War.aoecpn  AIImprovementsTest.aoe2campaign  Armies at War A Combat Showcase.cpn  DER FALL VON SACSAHUAMAN - TEIL I.cpx  Rise of Egypt Learning Campaign.cpn  acam1.aoe2campaign  rcam3.aoe2campaign
crates/genie-dat/: Cargo.toml  README.md
crates/genie-dat/src/: civ.rs  color_table.rs  lib.rs  random_map.rs  sound.rs  sprite.rs  task.rs  tech.rs  tech_tree.rs  terrain.rs  unit_type.rs
crates/genie-drs/: Cargo.toml  README.md  test.drs
crates/genie-drs/src/: lib.rs  read.rs  write.rs
crates/genie-hki/: Cargo.toml  README.md
crates/genie-hki/src/: lib.rs
crates/genie-hki/test/files/: aoc2.hki  aoc3.hki  hd0.hki  hd1.hki  wk.hki
crates/genie-lang/: Cargo.toml  README.md
crates/genie-lang/src/: lib.rs
crates/genie-lang/test/inis/: korean.ini
crates/genie-rec/: Cargo.toml  README.md
crates/genie-rec/examples/: dump_header.rs  dump_rec.rs  nom_parser.rs
crates/genie-rec/src/: action.rs  actions.rs  ai.rs  element.rs  error.rs  game_options.rs  header.rs  lib.rs  map.rs  player.rs  reader.rs  reader.rs.old  string_table.rs  unit.rs  unit_action.rs  unit_type.rs  version.rs
crates/genie-rec/test/: AgeIIDE_Replay_90000059.aoe2record  AgeIIDE_Replay_90889731.aoe2record  rec.20181208-195117.mgz
crates/genie-scx/: Cargo.toml  README.md
crates/genie-scx/src/: ai.rs  bitmap.rs  format.rs  header.rs  lib.rs  map.rs  player.rs  triggers.rs  types.rs  util.rs  victory.rs
crates/genie-scx/src/convert/: aoc_to_wk.rs  hd_to_wk.rs  mod.rs
crates/genie-scx/test/scenarios/:  The Destruction of Rome.scn  A New Emporer.scn  Age of Heroes b1-3-5.scx  Bronze Age Art of War.scn  CAMELOT.SCN  CEASAR.scn  Corlis.aoescn  Dawn of a New Age.scn  El advenimiento de los hunos_.scx  Hotkey Trainer Buildings.aoe2scenario  Jeremiah Johnson (Update).scx  Year_of_the_Pig.aoe2scenario  layertest.aoe2scenario  real_world_amazon.scx
crates/genie-slp/: Cargo.toml
crates/genie-slp/src/: lib.rs
crates/genie-slp/test/fixtures/: eslogo1.slp  eslogo2.slp
crates/genie-support/: Cargo.toml  README.md
crates/genie-support/src/: ids.rs  lib.rs  macros.rs  map_into.rs  read.rs  strings.rs  versions.rs
crates/jascpal/: Cargo.toml  README.md
crates/jascpal/src/: lib.rs
examples/: convert_scx.rs  convertscx.rs  display_lang.rs  displayaochotkeys.rs  displaycivs.rs  displayhotkey.rs  displaylang.rs  extract_cpx.rs  extract_drs.rs  extractcpx.rs  extractdrs.rs  inspectscx.rs  print_rec_actions.rs  recactions.rs  renderslp.rs  set_hotkey.rs  sethotkey.rs  wolololang.rs
src/: lib.rs
