[package]
name = "genie"
version = "0.3.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Libraries for reading/writing Age of Empires II data files"
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"
readme = "README.md"

[dependencies]
genie-cpx = { version = "0.3.0", path = "crates/genie-cpx" }
genie-dat = { version = "0.1.0", path = "crates/genie-dat" }
genie-drs = { version = "0.2.0", path = "crates/genie-drs" }
genie-hki = { version = "0.2.0", path = "crates/genie-hki" }
genie-lang = { version = "0.2.0", path = "crates/genie-lang" }
genie-scx = { version = "2.0.0", path = "crates/genie-scx" }
jascpal = { version = "0.1.0", path = "crates/jascpal" }

[dev-dependencies]
structopt = "^0.3.11"

[workspace]
members = [
  "crates/genie-cpx",
  "crates/genie-dat",
  "crates/genie-drs",
  "crates/genie-hki",
  "crates/genie-lang",
  "crates/genie-scx",
  "crates/genie-support",
  "crates/jascpal",

  "c/cgenie",
  # need to figure out FFI generics to make this work
  # "c/cgenie-cpx",
  "c/cgenie-drs",
  "c/cgenie-hki",
  "c/cgenie-lang",
  "c/cgenie-scx",
]
