[package]
name = "cgenie-cpx"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "C-compatible APIs for the genie-cpx library"
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ffi-support = "^0.3.5"
genie-cpx = { path = "../../crates/genie-cpx" }
