[package]
name = "cgenie-hki"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "C-compatible APIs for the genie-hki library"
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ffi-support = "^0.3.5"
genie-hki = { path = "../../crates/genie-hki" }
