[package]
name = "genie-cpx"
version = "0.5.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Read and write Age of Empires I/II campaign files."
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"
exclude = ["test/campaigns"]

[dependencies]
byteorder = "1.4.3"
chardet = "0.2.4"
encoding_rs = "0.8.31"
genie-scx = { version = "4.0.0", path = "../genie-scx" }
thiserror = "1.0.35"

[dev-dependencies]
anyhow = "1.0.65"
