[package]
name = "genie-cpx"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read and write Age of Empires I/II campaign files."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
exclude = ["test/campaigns"]

[dependencies]
byteorder.workspace = true
chardet = "0.2.4"
encoding_rs.workspace = true
genie-scx = { version = "4.0.0", path = "../genie-scx" }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
