[package]
name = "genie-dat"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Read and write Age of Empires I/II data files."
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"

[dependencies]
arrayvec = "^0.5.1"
byteorder = "^1.3.1"
encoding_rs = "^0.8.17"
flate2 = { version = "^1.0.0", features = ["rust_backend"], default-features = false }
genie-support = { version = "^0.0.0", path = "../genie-support" }
jascpal = { version = "^0.1.0", path = "../jascpal" }
thiserror = "1.0.13"

[dev-dependencies]
anyhow = "1.0.27"
