[package]
name = "genie-dat"
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read and write Age of Empires I/II data files."
homepage = "https://github.com/SiegeEngineers/genie-rs/tree/default/crates/genie-dat"
documentation = "https://docs.rs/genie-dat"
repository.workspace = true
readme = "./README.md"

[dependencies]
arrayvec.workspace = true
byteorder.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
genie-support = { version = "^2.0.0", path = "../genie-support" }
jascpal = { version = "^0.1.0", path = "../jascpal" }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
