[package]
name = "genie-drs"
version = "0.2.1"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Read .drs archive files from the Genie Engine, used in Age of Empires 1/2 and SWGB"
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"
readme = "README.md"
exclude = ["*.drs"]

[dependencies]
byteorder = "1.4.3"
sorted-vec = "0.5.2"
thiserror = "1.0.24"

[dev-dependencies]
anyhow = "1.0.40"
