[package]
name = "genie-drs"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read .drs archive files from the Genie Engine, used in Age of Empires 1/2 and SWGB"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
exclude = ["*.drs"]

[dependencies]
byteorder.workspace = true
sorted-vec = "0.8.0"
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
