[package]
name = "genie-hki"
version = "0.2.1"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2021"
license = "GPL-3.0"
description = "Read Age of Empires I/II hotkey files."
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"
exclude = ["test/files"]

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.24"
genie-lang = { version = "^0.2.0", path = "../genie-lang" }
thiserror = "1.0.35"

[dev-dependencies]
anyhow = "1.0.65"
