[package]
name = "genie-hki"
version = "0.2.1"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read Age of Empires I/II hotkey files."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
exclude = ["test/files"]

[dependencies]
byteorder.workspace = true
flate2.workspace = true
genie-lang = { version = "^0.2.0", path = "../genie-lang" }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
