[package]
name = "genie-lang"
version = "0.2.1"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Read different types of language resource files from Age of Empires 1 and 2."
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"
exclude = ["test/dlls"]

[dependencies]
byteorder = "1.4.3"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
genie-support = { version = "1.0.0", path = "../genie-support" }
pelite = { version = "0.9.0", default-features = false, features = ["mmap"] }
thiserror = "1.0.24"

[dev-dependencies]
anyhow = "1.0.40"
