[package]
name = "genie-lang"
version = "0.2.1"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read different types of language resource files from Age of Empires 1 and 2."
homepage = "https://github.com/SiegeEngineers/genie-rs/tree/default/crates/genie-lang"
documentation = "https://docs.rs/genie-lang"
repository.workspace = true
readme = "./README.md"
exclude = ["test/dlls"]

[dependencies]
byteorder.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true
genie-support = { version = "1.0.0", path = "../genie-support" }
pelite = { version = "0.9.1", default-features = false, features = ["mmap"] }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
