[package]
name = "genie-rec"
version = "0.1.1"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Read Age of Empires I/II recorded game files."
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"

[dependencies]
arrayvec = "0.7.0"
byteorder = "1.4.3"
flate2 = { version = "1.0.20", features = ["rust_backend"], default-features = false }
genie-dat = { version = "0.1.0", path = "../genie-dat" }
genie-scx = { version = "4.0.0", path = "../genie-scx" }
genie-support = { version = "1.0.0", path = "../genie-support", features = ["strings"] }
thiserror = "1.0.24"

[dev-dependencies]
anyhow = "1.0.40"
