[package]
name = "genie-rec"
version = "0.1.1"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read Age of Empires I/II recorded game files."
homepage = "https://github.com/SiegeEngineers/genie-rs/tree/default/crates/genie-rec"
documentation = "https://docs.rs/genie-rec"
repository.workspace = true
readme = "./README.md"

[dependencies]
arrayvec.workspace = true
byteorder.workspace = true
flate2.workspace = true
genie-dat = { version = "0.1.0", path = "../genie-dat" }
genie-scx = { version = "4.0.0", path = "../genie-scx" }
genie-support = { version = "1.0.0", path = "../genie-support", features = [
    "strings",
] }
thiserror.workspace = true
serde_json = "1.0.64"
itertools = "0.10.5"

[dev-dependencies]
anyhow.workspace = true
