[package]
name = "genie-scx"
version = "4.0.0"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read and write Age of Empires I/II scenario files."
homepage = "https://github.com/SiegeEngineers/genie-rs/tree/default/crates/genie-scx"
documentation = "https://docs.rs/genie-scx"
repository.workspace = true
readme = "./README.md"
exclude = ["test/scenarios"]

[dependencies]
byteorder.workspace = true
flate2.workspace = true
genie-support = { version = "^1.0.0", path = "../genie-support", features = [
    "strings",
] }
log = "0.4.17"
nohash-hasher = "0.2.0"
rgb.workspace = true
thiserror.workspace = true
num_enum.workspace = true

[dev-dependencies]
anyhow.workspace = true
