[package]
name = "genie-support"
version = "1.0.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "GPL-3.0"
description = "Support library for genie-* crates"
homepage = "https://github.com/SiegeEngineers/genie-rs"
repository = "https://github.com/SiegeEngineers/genie-rs"

[dependencies]
byteorder = "1.4.3"
encoding_rs = { version = "0.8.31", optional = true }
thiserror = "1.0.35"

[features]
strings = ["encoding_rs"]

[dev-dependencies]
anyhow = "1.0.65"
