[package]
name = "genie-support"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Support library for genie-* crates"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
byteorder.workspace = true
encoding_rs = { version = "0.8.31", optional = true }
thiserror.workspace = true

[features]
strings = ["encoding_rs"]

[dev-dependencies]
anyhow.workspace = true
