[package]
name = "genie-support"
version = "2.0.0"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Support library for genie-* crates"
homepage = "https://github.com/SiegeEngineers/genie-rs/tree/default/crates/genie-support"
documentation = "https://docs.rs/genie-support"
repository.workspace = true
readme = "./README.md"

[dependencies]
byteorder.workspace = true
encoding_rs = { version = "0.8.31", optional = true }
thiserror.workspace = true

[features]
strings = ["encoding_rs"]

[dev-dependencies]
anyhow.workspace = true
