[package]
name = "jascpal"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Read and write JASC palette files."
homepage.workspace = true
repository.workspace = true

[dependencies]
nom = { version = "7.1.1", default-features = false, features = ["std"] }
rgb.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
